@@ -1,3 +1,9 @@
+2006-12-22  Bruno Haible  <bruno@clisp.org>
+
+	* sed/utils.c: Include pathmax.
+	* sed/mbcs.c: Use local_charset.
+	* sed/execute.c: Copy with padding after the mbstate_t member.
+	
 2006-12-21  Paolo Bonzini  <bonzini@gnu.org>
 
 	* sed/mbcs.c: Include string.h (reported by Henning Nielsen Lund).
